# CPU-interpreter

./: .gitignore  .gitmodules  1.txt  CMakeLists.txt  Makefile  README.md  asm.rb  fib.rb  input.rb  test.rb
asm/: asm.rb
common/: cmd.h  cmd_bin.txt  interface.h
cpu/include/: arr_work.h  arr_work.hpp  base_block.hpp  block_work.hpp  cpu_header.h  cpu_header.hpp  dsl.h  dsl.hpp  include.h  include.hpp  instructions.h  instructions.hpp  stages.h  stages.hpp  trans_block.hpp  translate.hpp
cpu/src/: arr_work.c  arr_work.cpp  instructions.c  instructions.cpp  interpet_templates.cpp  interpret.cpp  main.c  main.cpp  stages.c  stages.cpp  translate.cpp  translate_templates.cpp
executables/: fib  test
utilities/: file_work.c  file_work.cpp  file_work.h  file_work.hpp
